--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -7,9 +7,28 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-
+  width: 100%;
 }
 
+.contenedor_petcar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+}
+
+.header_pet{
+  width: 50px;
+  filter: invert(100%);
+}
+.btn_tienda{
+  background-color: transparent;
+  border: none;
+}
+.header_carrito{
+  width: 90px;
+  filter: invert(100%);
+}
 .info_productos{
   width: 600px;
   height: 200px;
@@ -21,7 +40,19 @@
 }
 
 /* fin header */
-
+/*Modal carrito*/
+.modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* Fin modal*/
 /* productos */ 
 
 .contenedor_productos{
